--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
-<head>
-<meta http-equiv="refresh" content="0;url=http://cs-people.bu.edu/lapets/" />
-<title>lapets.github.io</title>
-<style>
-body { background-color: #FFFFFF; margin-top: 20px; margin-bottom: 0px; margin-right: 8px; margin-left: 30px; }
-#content { width:550px; min-width:460px; text-align:left; vertical-align:top; color:#373834; font-size:12px; font-family:Verdana,Arial,Sans-serif; }
-#content a { color: #D52727; text-decoration: none; }
-#content a:hover { color: #D52727; text-decoration: underline; }
-</style>
-</head>
-
-<body>
-<div id="content">
-<h3>This page is located at <a href="http://cs-people.bu.edu/lapets/">http://cs-people.bu.edu/lapets/</a>.</h3>
-</div>
-
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0;url=http://cs-people.bu.edu/lapets/" />
+    <title>lapets.github.io</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" />
+    <style>
+body { background-color:#FFFFFF; margin-top:20px; margin-bottom:0px; margin-right:8px; margin-left:30px; }
+#content { width:550px; min-width:460px; text-align:left; vertical-align:top; color:#173834; font-size:13px; font-family:'Source Sans Pro',Arial,Sans-serif; }
+#content a { color:#D52727; text-decoration:none; }
+#content a:hover { color:#D52727; text-decoration:underline; }
+    </style>
+  </head>
+  <body>
+    <div id="content">
+      <h3>This page is located at <a href="http://cs-people.bu.edu/lapets/">http://cs-people.bu.edu/lapets/</a>.</h3>
+    </div>
+  </body>
 </html>
