--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
 body { background-color:#FFFFFF; margin-top:20px; margin-bottom:0px; margin-right:8px; margin-left:30px; }
 #content { width:550px; min-width:460px; text-align:left; vertical-align:top; color:#173834; font-size:13px; font-family:'Source Sans Pro',Arial,Sans-serif; }
-#content a { color:#D52727; text-decoration:none; }
-#content a:hover { color:#D52727; text-decoration:underline; }
+#content a { color:#BC623A; text-decoration:none; }
+#content a:hover { color:#D52727; }
     </style>
   </head>
   <body>
