Update HTTP links to HTTPS.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <meta http-equiv="refresh" content="0;url=http://cs-people.bu.edu/lapets/" />
+    <meta http-equiv="refresh" content="0;url=https://cs-people.bu.edu/lapets/" />
     <title>lapets.github.io</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" />
     <style>
@@ -14,7 +14,7 @@ body { background-color:#FFFFFF; margin-top:20px; margin-bottom:0px; margin-righ
   </head>
   <body>
     <div id="content">
-      <h3>This page is located at <a href="http://cs-people.bu.edu/lapets/">http://cs-people.bu.edu/lapets/</a>.</h3>
+      <h3>This page is located at <a href="https://cs-people.bu.edu/lapets/">https://cs-people.bu.edu/lapets/</a>.</h3>
     </div>
   </body>
 </html>
