Switch from PHP to JS bibliography page.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 docs[id] = json[attr][id];
                 jsons[id] = json;
                 json['#id'] = id;
-                json['#bib'] = 'bib.php#' + id;
+                json['#bib'] = 'bib.html#' + id;
               }
             }
           }
