Fix anchor behavior in bibliography.

--- a/bib.html
+++ b/bib.html
@@ -45,6 +45,8 @@ function render_items() {
       }   
     }
   }
+  var anchor = window.location.hash.substr(1);
+  document.getElementById(anchor).scrollIntoView();
 }
     </script>
   </head>
