Add linked internal website documents; adjust some links.

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <ol>
               <li><a href="pub/plcourse.pdf">Notes on concepts of programming languages.</a> (section notes)</li>
               <li><a href="pub/plproblems.pdf">Problem sets for a course on functional programming.</a></li>
-              <li><a href="course/332/sections.pdf">Introductory notes on the theory of computation.</a> (section notes)</li>
+              <li><a href="pub/theory-comp.pdf">Introductory notes on the theory of computation.</a> (section notes)</li>
               <li><a href="pub/formalcrypt.pdf">Survey: formal proof languages and cryptography.</a></li>
               <li><a href="pub/phddepth.pdf">Comments on selected papers.</a> (Ph.D. depth exam)</li>
               <li><a href="pub/tdstpwp.pdf">Transformations on Simple Programs with Proofs.</a></li>
