Add course pages for CS 491 and CS 506.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <li>
                 <a href="https://www.bu.edu/academics/cas/courses/cas-cs-506/">CS 506 <span>Computational Tools for Data Science</span></a>
                 <p><span>(</span>
-                  <a href="course/506/">Fal. 2018</a>
+                  <a href="course/506-2018-fal/">Fal. 2018</a>
                 <span>)</span></p>
               </li>
               <li>
@@ -206,7 +206,7 @@
               <li>
                 <a href="https://www.bu.edu/academics/cas/courses/cas-cs-491/">CS 491 L1</a> <span><a href="http://else.bu.edu">Experiential Lab in Software Engineering (ELSE)</a></span>
                 <p><span>(</span>
-                  <a href="course/491/">Fal. 2017</a>
+                  <a href="course/491-2017-fal/">Fal. 2017</a>
                 <span>)</span></p>
               </li>
               <li>
