Add source and rendered versions of CS 504 notes.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <li>
                 <a href="https://www.bu.edu/academics/cas/courses/cas-cs-504/">CS 504</a> <span><a href="http://datamechanics.org">Data Mechanics</a></span>
                 <p><span>(</span>
-                  <a href="course/504/">Spr. 2019</a>
+                  <a href="course/504-2019-spr/">Spr. 2019</a>
                 <span>)</span></p>
               </li>
               <li>
