Adjust some links and add sitemap.

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <span>)</span></p>
               </li>
               <li>
-                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-320/">CS 320 <span>Concepts of Programming Languages</span></a>
+                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-320/">CS 320</a> <span><a href="course-programming-languages/">Concepts of Programming Languages</a></span>
                 <p><span>(</span>
                   <a href="course/320-2015-fal/">Fal. 2015</a>,
                   <a href="course/320-2015-spr/">Spr. 2015</a>,
@@ -219,7 +219,7 @@
                 <span>)</span></p>
               </li>
               <li>
-                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-235/">CS 235 <span>Algebraic Algorithms</span></a>
+                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-235/">CS 235</a> <span><a href="course-abstract-algebra/">Algebraic Algorithms</a></span>
                 <p><span>(</span>
                   <a href="course/235-2016-spr/">Spr. 2016</a>,
                   <a href="course/235-2015-fal/">Fal. 2015</a>,
