Add/adjust links to course notes.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <span><a href="https://www.bu.edu/cs/">Department of Computer Science</a> at <a href="https://www.bu.edu">Boston University</a></span>
             </h3>
 
-            <p>I have taught department courses on <a href="course/131-2014-spr/">logic and combinatorics</a>, <a href="course/132-2013-spr/">linear algebra</a>, <a href="course/235/">abstract algebra</a>, <a href="course/320/">programming language theory and compilers</a>, <a href="http://www.datamechanics.org">data science</a>, <a href="https://piazza.com/bu/fall2017/cs591v1/home">secure multi-party computation</a>, and <a href="http://else.bu.edu">software engineering</a>. I also oversee undergraduate Computer Science students through <a href="https://www.bu.edu/urop/">UROP</a> and directed studies, and serve as faculty adviser for students' <a href="https://www.bu.edu/khc/">Kilachand Honors College</a> keystone projects.</p>
+            <p>I have taught department courses on <a href="course-logic-and-combinatorics/">logic and combinatorics</a>, <a href="course-linear-algebra/">linear algebra</a>, <a href="course-abstract-algebra/">abstract algebra</a>, <a href="course-programming-languages/">programming language theory and compilers</a>, <a href="http://www.datamechanics.org">data science</a>, <a href="https://piazza.com/bu/fall2017/cs591v1/home">secure multi-party computation</a>, and <a href="http://else.bu.edu">software engineering</a>. I also oversee undergraduate Computer Science students through <a href="https://www.bu.edu/urop/">UROP</a> and directed studies, and serve as faculty adviser for students' <a href="https://www.bu.edu/khc/">Kilachand Honors College</a> keystone projects.</p>
 
             <fieldset>
               <legend><a href="http://www.datamechanics.org">Data Mechanics</a></legend>
@@ -231,13 +231,13 @@
                 <span>)</span></p>
               </li>
               <li>
-                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-132/">CS 132 <span>Geometric Algorithms</span></a>
+                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-132/">CS 132</a> <span><a href="course-linear-algebra/">Geometric Algorithms</a></span>
                 <p><span>(</span>
                   <a href="course/132-2013-spr/">Spr. 2013</a>
                 <span>)</span></p>
               </li>
               <li>
-                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-131/">CS 131 <span>Combinatoric Structures</span></a>
+                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-131/">CS 131</a> <span><a href="course-logic-and-combinatorics/">Combinatoric Structures</a></span>
                 <p><span>(</span>
                   <a href="course/131-2014-spr/">Spr. 2014</a>
                 <span>)</span></p>
