Adjust some links to course notes.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
             <fieldset>
               <legend><a href="http://www.datamechanics.org">Data Mechanics</a></legend>
-              <p>A data repository and service platform to support educational and research efforts in data science and focusing on urban applications, being built concurrently with a graduate course on the topic.</p>
+              <p>A data repository and service platform to support educational and research efforts in data science and focusing on urban applications, built concurrently with a <a href="course-data-mechanics/">graduate course</a> on the topic.</p>
             </fieldset>
 
             <fieldset>
@@ -182,7 +182,7 @@
                 <span>)</span></p>
               </li>
               <li>
-                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-591/">CS 591 L1</a> <span><a href="http://datamechanics.org">Data Mechanics for Pervasive Systems &amp; Urban Applications</a></span>
+                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-591/">CS 591 L1</a> <span><a href="course-data-mechanics/">Data Mechanics for Pervasive Systems &amp; Urban Applications</a></span>
                 <p><span>(</span>
                   <a href="course/591-2018-spr/">Spr. 2018</a>,
                   <a href="course/591-2017-fal/">Fal. 2017</a>,
@@ -192,13 +192,13 @@
                 <span>)</span></p>
               </li>
               <li>
-                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-506/">CS 506 <span>Computational Tools for Data Science</span></a>
+                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-506/">CS 506</a> <span><a href="https://github.com/lapets/course-data-science">Computational Tools for Data Science</a></span>
                 <p><span>(</span>
                   <a href="course/506-2018-fal/">Fal. 2018</a>
                 <span>)</span></p>
               </li>
               <li>
-                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-504/">CS 504</a> <span><a href="http://datamechanics.org">Data Mechanics</a></span>
+                <a href="https://www.bu.edu/academics/cas/courses/cas-cs-504/">CS 504</a> <span><a href="course-data-mechanics/">Data Mechanics</a></span>
                 <p><span>(</span>
                   <a href="course/504-2019-spr/">Spr. 2019</a>
                 <span>)</span></p>
