Add a few publications and a co-author link; render PDF links.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       function links(jsons, json) {
         var l = [];
         if ('#bib' in json) l = l.concat(['<a href="' +json['#bib']+ '">bib</a>']);
+        if ('#pdf' in json) l = l.concat(['<a href="' +json['#pdf']+ '">pdf</a>']);
         if ('#abstract' in json) l = l.concat(['<a href="' +json['#abstract']+ '">abstract</a>']);
         if ('#slides' in json) l = l.concat(['<a href="' +json['#slides']+ '">slides</a>']);
         if ('#report' in json && '#slides' in jsons[json['#report']]) l = l.concat(['<a href="' +jsons[json['#report']]['#slides']+ '">slides</a>']);
