Add content about current activities on main page.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
           <div>
             <h3>Founder, Principal, and Advisor</h3>
             <p>I am currently involved in a number of early-stage technology companies working in the areas of cybersecurity, data science, and formal methods.</p>
+
+            <fieldset>
+              <legend>Nth Party</legend>
+              <p>Nth Party is building and deploying next-generation privacy-enhancing solutions across a number of verticals while contributing to open-source secure multi-party computation frameworks and standards.</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Reity</legend>
+              <p>Reity provides research and engineering consulting services to organizations and initiatives that are applying formal methods concepts and techniques within a number of application domains.</p>
+            </fieldset>
           </div>
 
           <div>
