Update personal page links in course pages/notes.

--- a/course/142-2012-spr/index.html
+++ b/course/142-2012-spr/index.html
@@ -48,7 +48,7 @@
    <br/>
    <br/>
    <ul class="info_items">
-    <li><span class="lbl">instructor:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a> (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)</li>
+    <li><span class="lbl">instructor:</span> <a href="https://lapets.io">Andrei Lapets</a> (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)</li>
     <li><span class="lbl">office hours:</span> Mon. 3-4 PM; Fri. 12-2 PM <b>MCS B24</b></li>
     <li><span class="lbl">mailing list (questions/discussion):</span> <a href="mailto:casma142a1-l@bu.edu">casma142a1-l@bu.edu</a></li>
    </ul>
