--- a/course/142-2013-spr/index.html
+++ b/course/142-2013-spr/index.html
@@ -51,7 +51,7 @@
    <ul class="info_items">
     <li><span class="sect">lectures:</span>
      <br/>&nbsp;&nbsp; Tue. & Thu., 3:30 PM - 5:00 PM in MCS B23
-     <br/>&nbsp;&nbsp; <span class="lbl">lecturer:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)
+     <br/>&nbsp;&nbsp; <span class="lbl">lecturer:</span> <a href="https://lapets.io">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)
      <br/>&nbsp;&nbsp; <span class="lbl">OH:</span> Tue. 1-3 PM; Wed. 3-4 PM
      <br/>
      <br/>
