--- a/course/235-2013-fal/index.html
+++ b/course/235-2013-fal/index.html
@@ -52,7 +52,7 @@
    <ul class="info_items">
     <li><span class="sect">lectures:</span>
      <br/>&nbsp;&nbsp; Tue. & Thu., 3:30-5:00 PM in GCB 209
-     <br/>&nbsp;&nbsp; <span class="lbl">lecturer:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>)
+     <br/>&nbsp;&nbsp; <span class="lbl">lecturer:</span> <a href="https://lapets.io">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>)
      <br/>&nbsp;&nbsp; <span class="lbl">OH:</span> Wed. 1 - 3 PM; Thu. 2:15 - 3:15 PM <b>(<a href="http://www.bu.edu/cs/resources/laboratories/undergraduate-lab/">CS lab</a>)</b>
      <br/>
      <br/>
