--- a/course/320-2015-fal/index.html
+++ b/course/320-2015-fal/index.html
@@ -55,7 +55,7 @@
    <ul class="info_items">
     <li><span class="sect">lectures:</span>
      <br/>&nbsp;&nbsp; Tue. & Thu., 12:30 - 2 PM in <a href="http://www.bu.edu/classrooms/classroom/cgs-511/">CGS 511</a>
-     <br/>&nbsp;&nbsp; <span class="lbl">lecturer:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a> (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 173)
+     <br/>&nbsp;&nbsp; <span class="lbl">lecturer:</span> <a href="https://lapets.io">Andrei Lapets</a> (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 173)
      <br/>&nbsp;&nbsp; <span class="lbl">OH:</span> Wed. 5 - 7 PM; Thu. 2 - 3 PM (<a href="http://www.bu.edu/cs/resources/laboratories/undergraduate-lab/">CS lab</a>)
      <br/>
      <br/>
