--- a/course/491-2017-fal/index.html
+++ b/course/491-2017-fal/index.html
@@ -386,7 +386,7 @@
           <li><span>lectures:</span>
             <ul>
               <li>Tue. & Thu., 3:30 - 4:45 PM in MCS B08</li>
-              <li><span>lecturer:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)</li>
+              <li><span>lecturer:</span> <a href="https://lapets.io">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)</li>
               <li><span>OH:</span> Tue. 5 - 6:30 PM &amp; Thu. 11 AM - 12:30 PM at <a href="http://www.bu.edu/cs/resources/laboratories/undergraduate-lab/">CS lab</a></li>
             </ul>
           </li>
