--- a/course/504-2019-spr/index.html
+++ b/course/504-2019-spr/index.html
@@ -497,7 +497,7 @@
           <li><span>lectures:</span>
             <ul>
               <li>Tue. &amp; Thu., 9:30 - 10:45 AM in <a href="http://www.bu.edu/classrooms/classroom/cas-b12/">CAS B12</a></li>
-              <li><span>lecturer:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 174)</li>
+              <li><span>lecturer:</span> <a href="https://lapets.io">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 174)</li>
               <li><span>OH:</span> Tue. 5 - 7 PM in the <a href="http://www.bu.edu/cs/resources/laboratories/undergraduate-lab/">CS lab</a></li>
             </ul>
           </li>
