--- a/course/591-2016-fal/index.html
+++ b/course/591-2016-fal/index.html
@@ -455,7 +455,7 @@
         <li><span>lectures:</span>
           <ul>
             <li>Tue. & Thu., 9:30 - 11 AM in <a href="http://www.bu.edu/classrooms/classroom/cas-b20/">CAS B20</a></li>
-            <li><span>lecturer:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)</li>
+            <li><span>lecturer:</span> <a href="https://lapets.io">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)</li>
             <li><span>OH:</span> Tue. 4 - 6 PM; Thu. 11 AM - 12 PM (<a href="http://www.bu.edu/cs/resources/laboratories/undergraduate-lab/">CS lab</a>)</li>
           </ul>
         </li>
