--- a/course/506-2018-fal/index.html
+++ b/course/506-2018-fal/index.html
@@ -458,7 +458,7 @@
           <li><span>lectures:</span>
             <ul>
               <li>Tue. &amp; Thu., 3:30 - 4:45 PM in <a href="http://www.bu.edu/classrooms/classroom/cgs-511/">CGS 511</a></li>
-              <li><span>instructor:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 174)</li>
+              <li><span>instructor:</span> <a href="https://lapets.io">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 174)</li>
               <li><span>OH:</span> Tue. 5 - 7 PM in the <a href="http://www.bu.edu/cs/resources/laboratories/undergraduate-lab/">CS lab</a></li>
             </ul>
           </li>
