--- a/course/591-2017-fal/index.html
+++ b/course/591-2017-fal/index.html
@@ -526,7 +526,7 @@
           <li><span>lectures:</span>
             <ul>
               <li>Tue. &amp; Thu., 9:30 - 10:45 AM in <a href="http://www.bu.edu/classrooms/classroom/cas-226/">CAS 226</a></li>
-              <li><span>lecturer:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 172)</li>
+              <li><span>lecturer:</span> <a href="https://lapets.io">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 172)</li>
               <li><span>OH:</span> Tue. 5 - 6:30 PM &amp; Thu. 11 - 12:30 PM at <a href="http://www.bu.edu/cs/resources/laboratories/undergraduate-lab/">CS lab</a></li>
             </ul>
           </li>
