--- a/course/591-2017-spr/index.html
+++ b/course/591-2017-spr/index.html
@@ -448,7 +448,7 @@
           <li><span>lectures:</span>
             <ul>
               <li>Tue. & Thu., 9:30 - 10:45 AM in <a href="http://www.bu.edu/classrooms/classroom/epc-209/">EPC 209</a></li>
-              <li><span>lecturer:</span> <a href="http://cs-people.bu.edu/lapets">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)</li>
+              <li><span>lecturer:</span> <a href="https://lapets.io">Andrei Lapets</a>  (<a href="mailto:lapets@bu.edu">lapets@bu.edu</a>, MCS 176)</li>
               <li><span>OH:</span> Tue. 4 - 6 PM & Thu. 11 AM - 12 PM at <a href="http://www.bu.edu/cs/resources/laboratories/undergraduate-lab/">CS lab</a></li>
             </ul>
           </li>
