Add links from archival course notes to latest versions.

--- a/course/142-2012-spr/s.html
+++ b/course/142-2012-spr/s.html
@@ -57,6 +57,11 @@
  <body>
  <div id="container">
 
+<div style="margin:30px 0px 40px 0px; padding:2px; background-color:red; font-family:Verdana,sans-serif; font-size:14px;">
+<div style="padding:10px; background-color:#F5C2C1;">
+<b>The lecture notes below are presented for archival purposes as they appeared at the time that this course was originally offered. The latest version of these notes is available at <a style="color:blue;" href="https://lapets.io/course-linear-algebra">https://lapets.io/course-linear-algebra</a></b>.
+</div>
+</div>
 
 <b>NOTE:</b> This page contains all the machine-verifiable examples presented during the lectures, as well as all the homework assignments. <b><a href="index.php">Click here</a></b> to go back to the main page with the course information and schedule.
 <br/>
