--- a/course/235-2015-spr/s.html
+++ b/course/235-2015-spr/s.html
@@ -13,6 +13,13 @@
 <script type="text/javascript" src="sheaf/sheaf.js"></script>
 </head>
 <body>
+
+<div style="margin:50px 61px -10px 59px; padding:2px; background-color:red; font-family:Verdana,sans-serif; font-size:14px;">
+<div style="padding:10px; background-color:#F5C2C1;">
+<b>The lecture notes below are presented for archival purposes as they appeared at the time that this course was originally offered. The latest version of these notes is available at <a style="color:blue;" href="https://lapets.io/course-abstract-algebra">https://lapets.io/course-abstract-algebra</a></b>.
+</div>
+</div>
+
 <div class="sheaf" id="sheaf"><b>NOTE:</b> This page contains all the examples presented during the lectures, as well as all the homework assignments. <b><a href="index.html">Click here</a></b> to go back to the main page with the course information and schedule.<br/><div class="toc"><ul> <li>1. <a href="#1">Introduction, Background, and Motivation</a>
   <ul>  <li>1.1. <a href="#1.1">Overview</a></li>  <li>1.2. <a href="#1.2">Informal motivating example: random number generation</a></li>
   </ul>
