Adjust paragraph position and fix HTML tag in education section.

--- a/index.html
+++ b/index.html
@@ -340,13 +340,19 @@
 
           <div>
             <h3>Education</h3>
-            <p>In 2010, I earned my Ph.D. as a student within the <a href="https://www.bu.edu/cs/">Department of Computer Science</a> at the <a href="https://www.bu.edu/cas/academics/graduate-education/">Boston University Graduate School of Arts and Sciences</a>. I was involved with the <a href="https://sites.google.com/site/ibenchbu/">iBench Initiative</a> and the <a href="http://types.bu.edu/">Church Project</a>, both as a participant and an organizer.
-            <table>
-              <tr><td>2010</td><td>Ph.D.</td><td><a href="https://www.bu.edu/cs/">Computer Science</a></td></tr>
-              <tr><td>2007</td><td>S.M.</td><td><a href="https://www.seas.harvard.edu/programs/graduate/computer-science">Computer Science</a></td></tr>
-              <tr><td>2007</td><td>A.B.</td><td><a href="https://www.seas.harvard.edu/programs/computer-science">Computer Science</a> and <a href="https://www.math.harvard.edu/">Mathematics</a></td></tr>
-            </table>
-            <p>Until 2007, I attended <a href="https://www.fas.harvard.edu/">Harvard University</a>, <a href="https://www.seas.harvard.edu/">SEAS</a> and concentrated in computer science and mathematics. During my time there, I also participated in the <a href="https://pl.seas.harvard.edu/">Programming Languages Group</a>.</p>
+            <p>
+              In 2010, I earned my Ph.D. as a student within the <a href="https://www.bu.edu/cs/">Department of Computer Science</a> at the <a href="https://www.bu.edu/cas/academics/graduate-education/">Boston University Graduate School of Arts and Sciences</a>. I was involved with the <a href="https://sites.google.com/site/ibenchbu/">iBench Initiative</a> and the <a href="http://types.bu.edu/">Church Project</a>, both as a participant and an organizer.
+              <table>
+                <tr><td>2010</td><td>Ph.D.</td><td><a href="https://www.bu.edu/cs/">Computer Science</a></td></tr>
+              </table>
+            </p>
+            <p>
+              Until 2007, I attended <a href="https://www.fas.harvard.edu/">Harvard University</a>, <a href="https://www.seas.harvard.edu/">SEAS</a> and concentrated in computer science and mathematics. During my time there, I also participated in the <a href="https://pl.seas.harvard.edu/">Programming Languages Group</a>.
+              <table>
+                <tr><td>2007</td><td>S.M.</td><td><a href="https://www.seas.harvard.edu/programs/graduate/computer-science">Computer Science</a></td></tr>
+                <tr><td>2007</td><td>A.B.</td><td><a href="https://www.seas.harvard.edu/programs/computer-science">Computer Science</a> and <a href="https://www.math.harvard.edu/">Mathematics</a></td></tr>
+              </table>
+            </p>
           </div>
 
           <div>
