--- a/index.html
+++ b/index.html
@@ -135,10 +135,16 @@
             <p>I am currently involved in a number of early-stage technology companies working in the areas of cybersecurity, data science, and formal methods.</p>
 
             <fieldset>
-              <legend>Nth Party
+              <legend><a href="https://nthparty.com">Nth Party, Ltd.</a>
                 <span>
                   [
                   <a href="https://github.com/nthparty"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/nth-party"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://medium.com/nthparty"><i class="fab fa-medium"></i></a>
+                  <span>|</span>
+                  <a href="https://twitter.com/@nthparty"><i class="fab fa-twitter"></i></a>
                   ]
                 </span>
               </legend>
@@ -146,7 +152,7 @@
             </fieldset>
 
             <fieldset>
-              <legend><a href="https://reity.org">Reity</a>
+              <legend><a href="https://reity.org">Reity LLC</a>
                 <span>
                   [
                   <a href="https://github.com/reity"><i class="fab fa-github"></i></a>
