Add/update current activities on main page.

--- a/index.html
+++ b/index.html
@@ -135,11 +135,41 @@
             </span>
           </h1>
           <div>
-            <h3>Founder, Principal, and Advisor</h3>
-            <p>I am currently involved in a number of early-stage technology companies working in the areas of cybersecurity, data science, and formal methods.</p>
+            <h3>Applied Scientist, Founder, and Advisor</h3>
+            <p>I am currently helping organizations integrate novel technologies into real-world infrastructure in the areas of cybersecurity, data science, and formal methods.</p>
 
             <fieldset>
-              <legend><a href="https://nthparty.com">Nth Party, Ltd.</a>
+              <legend>VP, Engineering &amp; Applied Cryptography<br/><a href="https://magnite.com">Magnite</a>
+                <span>
+                  [
+                  <a href="https://github.com/MagniteEngineering"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/magnite"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://twitter.com/magnite"><i class="fab fa-twitter"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>The advertising platform provider Magnite is introducing and integrating privacy-enhancing technologies such as secure multi-party computation into advertising technology infrastructure and services.</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Member, Board of Directors<br/><a href="https://mpcalliance.org">MPC Alliance</a>
+                <span>
+                  [
+                  <a href="https://github.com/mpc-alliance"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/mpc-alliance"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://twitter.com/mpcalliance"><i class="fab fa-twitter"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>The MPC Alliance is a consortium of both early-stage and large organizations that are working together to accelerate awareness, acceptance, and adoption of secure multi-party computation (MPC) technologies.</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Chief Science Officer<br/><a href="https://nthparty.com">Nth Party, Ltd.</a>
                 <span>
                   [
                   <a href="https://github.com/nthparty"><i class="fab fa-github"></i></a>
@@ -151,12 +181,13 @@
                   <a href="https://twitter.com/@nthparty"><i class="fab fa-twitter"></i></a>
                   ]
                 </span>
+                (acquired by <a href="https://magnite.com">Magnite</a>)
               </legend>
               <p>Nth Party is building and deploying next-generation privacy-enhancing solutions across a number of verticals while contributing to open-source secure multi-party computation frameworks and standards.</p>
             </fieldset>
 
             <fieldset>
-              <legend><a href="https://reity.org">Reity LLC</a>
+              <legend>Principal<br/><a href="https://reity.org">Reity LLC</a>
                 <span>
                   [
                   <a href="https://github.com/reity"><i class="fab fa-github"></i></a>
@@ -165,7 +196,7 @@
                   ]
                 </span>
               </legend>
-              <p>Reity provides research and engineering consulting services to organizations and initiatives that are applying formal methods concepts and techniques within a number of application domains.</p>
+              <p>Reity provides consulting services and other forms of assistance to organizations and initiatives that work at the boundaries between computer science research efforts and their practical applications and impacts.</p>
             </fieldset>
           </div>
 
