--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta content="all" name="robots" />
     <title>andrei lapets</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" 
-          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.1/css/all.css">
     <link rel="stylesheet" href="al.css" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90403446-1"></script>
     <script>
@@ -126,7 +125,7 @@
               <span>|</span>
               <a href="https://medium.com/@lapets"><i class="fab fa-medium"></i></a>
               <span>|</span>
-              <a href="https://twitter.com/andreilapets"><i class="fab fa-twitter"></i></a>
+              <a href="https://x.com/andreilapets"><i class="fab fa-x-twitter"></i></a>
               <span>|</span>
               <a href="https://instagram.com/andreilapets/"><i class="fab fa-instagram"></i></a>
               <span>|</span>
@@ -136,7 +135,7 @@
           </h1>
           <div>
             <h3>Applied Scientist, Founder, and Advisor</h3>
-            <p>I am currently helping organizations integrate novel technologies into real-world infrastructure in the areas of cybersecurity, data science, and formal methods.</p>
+            <p>I am currently helping organizations integrate novel technologies into real-world infrastructure in the areas of cryptography, data science, and formal methods.</p>
 
             <fieldset>
               <legend>VP, Engineering &amp; Applied Cryptography<br/><a href="https://magnite.com">Magnite</a>
@@ -146,7 +145,7 @@
                   <span>|</span>
                   <a href="https://linkedin.com/company/magnite"><i class="fab fa-linkedin"></i></a>
                   <span>|</span>
-                  <a href="https://twitter.com/magnite"><i class="fab fa-twitter"></i></a>
+                  <a href="https://x.com/magnite"><i class="fab fa-x-twitter"></i></a>
                   ]
                 </span>
               </legend>
@@ -161,7 +160,7 @@
                   <span>|</span>
                   <a href="https://linkedin.com/company/mpc-alliance"><i class="fab fa-linkedin"></i></a>
                   <span>|</span>
-                  <a href="https://twitter.com/mpcalliance"><i class="fab fa-twitter"></i></a>
+                  <a href="https://x.com/mpcalliance"><i class="fab fa-x-twitter"></i></a>
                   ]
                 </span>
               </legend>
@@ -169,7 +168,33 @@
             </fieldset>
 
             <fieldset>
-              <legend>Chief Science Officer<br/><a href="https://nthparty.com">Nth Party, Ltd.</a>
+              <legend>Contributor<br/><a href="https://iabtechlab.com">IAB Tech Lab</a>
+                <span>
+                  [
+                  <a href="https://github.com/iabtechlab"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/iabtechlab"><i class="fab fa-linkedin"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>The IAB Tech Lab is a non-profit research and development consortium that produces standards, software, and services for the digital advertising industry (including <a href="https://iabtechlab.com/pets/">those that leverage privacy-enhancing technologies</a>).</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Member, Halo Industry Technical Advisory Group<br/><a href="https://wfanet.org/">World Federation of Advertisers</a>
+                <span>
+                  [
+                  <a href="https://github.com/world-federation-of-advertisers"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/wfa"><i class="fab fa-linkedin"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>The World Federation of Advertisers (WFA) is a peer-to-peer network of brands and advertising associations collaborating on technology initiatives (such as <a href="https://wfanet.org/leadership/cross-media-measurement">privacy-preserving cross-media measurement</a> infrastructures).</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Chief Science Officer &amp; Co-Founder<br/><a href="https://nthparty.com">Nth Party, Ltd.</a>
                 <span>
                   [
                   <a href="https://github.com/nthparty"><i class="fab fa-github"></i></a>
@@ -178,12 +203,12 @@
                   <span>|</span>
                   <a href="https://medium.com/nthparty"><i class="fab fa-medium"></i></a>
                   <span>|</span>
-                  <a href="https://twitter.com/@nthparty"><i class="fab fa-twitter"></i></a>
+                  <a href="https://x.com/@nthparty"><i class="fab fa-x-twitter"></i></a>
                   ]
                 </span>
                 (acquired by <a href="https://magnite.com">Magnite</a>)
               </legend>
-              <p>Nth Party is building and deploying next-generation privacy-enhancing solutions across a number of verticals while contributing to open-source secure multi-party computation frameworks and standards.</p>
+              <p>Nth Party builds and deploys next-generation privacy-enhancing solutions across a number of verticals while contributing to open-source secure multi-party computation frameworks and standards.</p>
             </fieldset>
 
             <fieldset>
@@ -193,10 +218,42 @@
                   <a href="https://github.com/reity"><i class="fab fa-github"></i></a>
                   <span>|</span>
                   <a href="https://linkedin.com/company/reity"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://medium.com/reity-llc"><i class="fab fa-medium"></i></a>
                   ]
                 </span>
               </legend>
               <p>Reity provides consulting services and other forms of assistance to organizations and initiatives that work at the boundaries between computer science research efforts and their practical applications and impacts.</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Chief Science Officer &amp; Co-Founder<br/><a href="https://choosek.com">Choose K Corp.</a>
+                <span>
+                  [
+                  <a href="https://github.com/choosek"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/choosek"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://x.com/@choosekcorp"><i class="fab fa-x-twitter"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>Choose K helps build production-ready encrypted workflows for finance and Web3 applications.</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Technical Advisor<br/><a href="https://nillion.com">Nillion</a>
+                <span>
+                  [
+                  <a href="https://github.com/nillion-oss"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/nillionnetwork"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://x.com/@nillionnetwork"><i class="fab fa-x-twitter"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>Nillion is a secure computation network that decentralizes trust for high-value data.</p>
             </fieldset>
           </div>
 
@@ -205,7 +262,7 @@
               <span><a href="https://www.bu.edu/hic/">Hariri Institute for Computing</a>
                 <span>
                   [
-                  <a href="https://twitter.com/bu_computing"><i class="fab fa-twitter"></i></a>
+                  <a href="https://x.com/bu_computing"><i class="fab fa-x-twitter"></i></a>
                   ]
                 </span>
                 at <a href="https://www.bu.edu">Boston University</a>
@@ -249,7 +306,7 @@
                   <span>|</span>
                   <a href="https://linkedin.com/company/bu-sail"><i class="fab fa-linkedin"></i></a>
                   <span>|</span>
-                  <a href="https://twitter.com/hicsail"><i class="fab fa-twitter"></i></a>
+                  <a href="https://x.com/hicsail"><i class="fab fa-x-twitter"></i></a>
                   ]
                 </span>
                 at <a href="https://www.bu.edu">Boston University</a>
